# fastapi-practices

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  jwt_manager.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: black.yml  flake8.yml
config/: database.py
middlewares/: error_handler.py  jwt_bearer.py
models/: movie.py  user.py
routers/: movie.py  user.py
schemas/: movie.py  user.py
services/: movie.py  user.py
templates/: index.py
utils/: jwt_manager.py
